[gd_scene load_steps=13 format=3 uid="uid://c2tqxya7186np"]

[ext_resource type="Theme" uid="uid://bom6o00y4xegp" path="res://ui/_shared/default_theme.tres" id="1_d0ts2"]
[ext_resource type="Script" path="res://ui/in_game_ui/item/item.gd" id="1_j23l1"]
[ext_resource type="Texture2D" uid="uid://dd8lnqpuvsa1p" path="res://assets/drop/drop_icon/毒牙.png" id="2_66ajn"]
[ext_resource type="Texture2D" uid="uid://dcqg17f3w7gyw" path="res://assets/ui/drop_inventory/drop_inventory.png" id="2_opc7e"]
[ext_resource type="Texture2D" uid="uid://oox8ovainomr" path="res://assets/drop/drop_icon/蹼.png" id="3_ib44j"]
[ext_resource type="Texture2D" uid="uid://2a1d3h77vlti" path="res://assets/drop/drop_icon/蛇信子.png" id="3_q8tjl"]
[ext_resource type="Texture2D" uid="uid://uur1ba7g5jhd" path="res://assets/drop/drop_icon/蜘蛛丝.png" id="4_1vf1a"]
[ext_resource type="Texture2D" uid="uid://d03qgvj2oqmq6" path="res://assets/drop/drop_icon/阴足.png" id="5_curvw"]
[ext_resource type="Texture2D" uid="uid://c34sesk45sy5j" path="res://assets/drop/drop_icon/环节.png" id="6_qbb8q"]
[ext_resource type="Texture2D" uid="uid://dtvta0pn46frq" path="res://assets/drop/drop_icon/骨头.png" id="8_ej1jr"]
[ext_resource type="Texture2D" uid="uid://iju8iavfsse8" path="res://assets/drop/drop_icon/头.png" id="9_6a83b"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_axvlj"]
texture = ExtResource("2_opc7e")
texture_margin_left = 6.6214
texture_margin_top = 6.35113
texture_margin_right = 6.75653
texture_margin_bottom = 14.459
region_rect = Rect2(6, 11, 132, 37)

[node name="Item" type="Panel"]
custom_minimum_size = Vector2(2.08165e-12, 140)
offset_left = 9.0
offset_top = 1121.0
offset_right = 542.77
offset_bottom = 1261.0
theme = ExtResource("1_d0ts2")
script = ExtResource("1_j23l1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -11.0
offset_top = -19.0
offset_right = 186.0
offset_bottom = 49.0
scale = Vector2(2.83, 2.83)
theme_override_styles/panel = SubResource("StyleBoxTexture_axvlj")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 3.0
offset_right = 529.0
offset_bottom = 136.0
color = Color(0.211765, 0.0980392, 0.0431373, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Dropper" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SnakeDrop" type="VBoxContainer" parent="MarginContainer/Dropper"]
layout_mode = 2

[node name="SnakeTooth" type="HBoxContainer" parent="MarginContainer/Dropper/SnakeDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/SnakeDrop/SnakeTooth"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_66ajn")

[node name="Label" type="Label" parent="MarginContainer/Dropper/SnakeDrop/SnakeTooth"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SnakeTail" type="HBoxContainer" parent="MarginContainer/Dropper/SnakeDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/SnakeDrop/SnakeTail"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("3_q8tjl")

[node name="Label" type="Label" parent="MarginContainer/Dropper/SnakeDrop/SnakeTail"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrogDrop" type="VBoxContainer" parent="MarginContainer/Dropper"]
layout_mode = 2

[node name="FrogLeg" type="HBoxContainer" parent="MarginContainer/Dropper/FrogDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/FrogDrop/FrogLeg"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("3_ib44j")

[node name="Label" type="Label" parent="MarginContainer/Dropper/FrogDrop/FrogLeg"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FrogSilk" type="HBoxContainer" parent="MarginContainer/Dropper/FrogDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/FrogDrop/FrogSilk"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("4_1vf1a")

[node name="Label" type="Label" parent="MarginContainer/Dropper/FrogDrop/FrogSilk"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaggotDrop" type="VBoxContainer" parent="MarginContainer/Dropper"]
layout_mode = 2

[node name="MaggotFoot" type="HBoxContainer" parent="MarginContainer/Dropper/MaggotDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/MaggotDrop/MaggotFoot"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("5_curvw")

[node name="Label" type="Label" parent="MarginContainer/Dropper/MaggotDrop/MaggotFoot"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaggotLink" type="HBoxContainer" parent="MarginContainer/Dropper/MaggotDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/MaggotDrop/MaggotLink"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_qbb8q")

[node name="Label" type="Label" parent="MarginContainer/Dropper/MaggotDrop/MaggotLink"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MiscDrop" type="VBoxContainer" parent="MarginContainer/Dropper"]
layout_mode = 2

[node name="Bone" type="HBoxContainer" parent="MarginContainer/Dropper/MiscDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/MiscDrop/Bone"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("8_ej1jr")

[node name="Label" type="Label" parent="MarginContainer/Dropper/MiscDrop/Bone"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Coin" type="HBoxContainer" parent="MarginContainer/Dropper/MiscDrop"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Dropper/MiscDrop/Coin"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("9_6a83b")

[node name="Label" type="Label" parent="MarginContainer/Dropper/MiscDrop/Coin"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="MarginContainer/Dropper/MiscDrop/Coin"]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="MarginContainer/Dropper/MiscDrop/Coin/Timer" to="." method="_on_timer_timeout"]
